--- a/src/components/Modal UI/Styles.module.css
+++ b/src/components/Modal UI/Styles.module.css
@@ -20,10 +20,24 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   min-width: 309px;
   max-height: 80vh !important;
-  overflow: auto;
+  /* overflow: auto; */
   text-align: center;
   /* transition: 250ms ease-in; */
   transition: height 5s ease;
+  position: relative;
+}
+.modalTitle{
+  font-family: "Montserrat";
+  position: absolute;
+  top: -5px;
+  background: #000;
+  color: #fff;
+  padding: 2px 15px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  font-size: 20px;
+  /* text-decoration: underline; */
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 .modalClose {
@@ -85,7 +99,7 @@
   letter-spacing: 1.12px;
   /* padding-left: 16px;
   padding-right: 16px; */
-  padding-top: 6px;
+  padding-top: 25px;
   padding-bottom: 8px;
 }
 .ModalHeader {
