--- a/src/components/CustomerSupportPage/Style.module.css
+++ b/src/components/CustomerSupportPage/Style.module.css
@@ -207,12 +207,17 @@
   .QuearyTicket {
     display: block;
   }
-
+  
   .CaseDivControll {
     margin: 20px 0 0 0;
   }
 }
 
+@media (max-width: 1600px) {
+  .CaseDivControll {
+    margin: 5px 0 0 0;
+  }
+}
 @media (max-width: 991px) {
   .supportLeft {
     display: grid;
