--- a/src/components/MyBagFinal/ShipmentHandler/Styles.module.css
+++ b/src/components/MyBagFinal/ShipmentHandler/Styles.module.css
@@ -35,7 +35,7 @@
   padding: 0;
   font-weight: bold;
 }
-.templateHolder .descHolder {
+.templateHolder .descHolder,.templateHolder .descHolder span {
   font-size: 11px;
   line-height: 15px;
 }
