--- a/src/components/MyBagFinal/ShipmentHandler/Styles.module.css
+++ b/src/components/MyBagFinal/ShipmentHandler/Styles.module.css
@@ -28,12 +28,14 @@
 }
 .templateHolder .labelHolder {
   margin: 0;
-  text-align: start;
   font-size: 14px;
   text-transform: uppercase;
   border-bottom: 0;
   padding: 0;
   font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .templateHolder .descHolder,.templateHolder .descHolder span {
   font-size: 11px;
