--- a/src/components/OrderList/MyBagFinal/Styles.module.css
+++ b/src/components/OrderList/MyBagFinal/Styles.module.css
@@ -259,7 +259,7 @@
   justify-content: space-between;
   padding: 10px 5px 0 5px;
   position: sticky;
-  bottom: 20px;
+  bottom: 0;
   background: #fff;
   flex-direction: column;
 }
