--- a/src/App.css
+++ b/src/App.css
@@ -132,12 +132,7 @@ a {
   width: 100%;
   text-align: center;
   margin: 40px auto;
-  border-bottom: solid 4px #28a745;
-}
-
-._success i {
-  font-size: 55px;
-  color: #28a745;
+  border-bottom: solid 4px #000;
 }
 
 ._success h2 {
