--- a/src/components/MyBagFinal/Styles.module.css
+++ b/src/components/MyBagFinal/Styles.module.css
@@ -107,7 +107,7 @@
   justify-content: space-between;
   border-bottom: 1px solid #e9e9e9;
   margin: 0 0 26px 0;
-  padding: 0 0 20px 0;
+  padding: 5px;
   align-items: center;
 }
 
